--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ asgiref==3.6.0
 Django==4.1.5
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+environs==9.5.0
 gunicorn==20.1.0
+marshmallow==3.19.0
+packaging==23.0
 Pillow==9.4.0
 psycopg2-binary==2.9.5
 PyJWT==2.6.0
