--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 asgiref==3.6.0
+certifi==2022.12.7
+charset-normalizer==3.0.1
+cloudinary==1.32.0
 Django==4.1.5
+django-cloudinary-storage==0.3.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 environs==9.5.0
 gunicorn==20.1.0
+idna==3.4
 marshmallow==3.19.0
 packaging==23.0
 Pillow==9.4.0
@@ -11,5 +16,8 @@ psycopg2-binary==2.9.5
 PyJWT==2.6.0
 python-dotenv==0.21.1
 pytz==2022.7.1
+requests==2.28.2
+six==1.16.0
 sqlparse==0.4.3
+urllib3==1.26.14
 whitenoise==6.3.0
